Add download PDF

--- a/7.1.0/angular/src/pdf/web-view-pdf/web-view.component.html
+++ b/7.1.0/angular/src/pdf/web-view-pdf/web-view.component.html
@@ -1,4 +1,5 @@
 <div class="page">
   <div class="header">Angular sample</div>
+  <button (click) = "downloadPDF()">Download</button>
   <div #viewer class="viewer"></div>
 </div>
