--- a/7.1.0/angular/src/app/pdf/web-view-pdf/web-view.component.html
+++ b/7.1.0/angular/src/app/pdf/web-view-pdf/web-view.component.html
@@ -1,5 +1,3 @@
-<div class="page">
-  <div class="header">Angular sample</div>
-  <button (click) = "downloadPDF()">Download</button>
-  <div #viewer class="viewer"></div>
+<div class="pdf-viewer">
+	<div id="pspdfkit-container" style="width: 100%; height: 100vh"></div>
 </div>
