--- a/7.1.0/angular/src/shared/core.less
+++ b/7.1.0/angular/src/shared/core.less
@@ -1,3 +1,4 @@
+@import "~@ng-select/ng-select/themes/default.theme.css";
 @media (min-width: 576px) {
   .nav-user-menu .user-image {
     float: none;
