--- a/7.1.0/angular/src/main/all-cv/all-cv.component.html
+++ b/7.1.0/angular/src/main/all-cv/all-cv.component.html
@@ -1,3 +1,4 @@
+<div [@routerTransition]>
 <div class="container-fluid pt-4 pl-4 pr-4">
     <div class="row">
         <div class="col-12">
@@ -47,4 +48,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
