--- a/7.1.0/angular/src/main/layout/header.component.html
+++ b/7.1.0/angular/src/main/layout/header.component.html
@@ -20,7 +20,7 @@
           <a class="nav-link text-secondary" routerLink="select-template">Tạo CV theo Template</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-secondary" href="#">Đánh giá CV</a>
+          <a class="nav-link text-secondary" routerLink="all-cv">Đánh giá CV</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-secondary" href="#">Top CV nổi bật</a>
@@ -99,7 +99,7 @@
             <a class="dropdown-item" href="#">Settings</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Logout</a>
+            <a class="dropdown-item" href="javascript:;" (click)="logout()">Logout</a>
           </li>
         </ul>
       </div>
