--- a/7.1.0/angular/src/main/layout/header.component.html
+++ b/7.1.0/angular/src/main/layout/header.component.html
@@ -93,7 +93,7 @@
         <ul id="basic-link-dropdown" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
           aria-labelledby="basic-link">
           <li>
-            <a class="dropdown-item" href="#">My profile</a>
+            <a class="dropdown-item" routerLink="user-information/1">My profile</a>
           </li>
           <li>
             <a class="dropdown-item" href="#">Settings</a>
