--- a/7.1.0/angular/src/main/layout/header.component.html
+++ b/7.1.0/angular/src/main/layout/header.component.html
@@ -87,8 +87,8 @@
       <div class="btn-group" dropdown>
         <a href id="basic-link" dropdownToggle (click)="false" aria-controls="basic-link-dropdown">
           <img src="./../../assets/img/Avatar.svg" height="40" alt="Avatar" loading="lazy" />
-          <span class="text-secondary"> Trần Đức Long <img src="./../../assets/img/ic_twotone-arrow-drop-down.svg" height="20" alt="dropdown"
-              loading="lazy" /></span>
+          <span class="text-secondary"> {{shownLoginName}} <img src="./../../assets/img/ic_twotone-arrow-drop-down.svg"
+              height="20" alt="dropdown" loading="lazy" /></span>
         </a>
         <ul id="basic-link-dropdown" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
           aria-labelledby="basic-link">
