--- a/7.1.0/angular/src/main/user-information/user-information.component.css
+++ b/7.1.0/angular/src/main/user-information/user-information.component.css
@@ -1,8 +1,53 @@
-.row{
+.row {
     background-color: #F5F5F5;
 }
-.form{
+
+.form {
     border: 1px solid #B4B4B4;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
     background-color: white;
+}
+
+.title-form {
+    font-family: 'Roboto';
+    font-size: 24px;
+}
+
+.btn-form {
+    height: 30px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    margin-left: 1rem;
+    /* display: flex; */
+    align-items: center;
+    /* text-align: center; */
+    letter-spacing: -0.015em;
+    text-transform: uppercase;
+    background-color: #0A2341;
+    width: 100px;
+    padding: 0 !important;
+    color: white;
+    border: none;
+    border-radius: 0rem;
+}
+
+.label-pdf {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400 !important;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.link-cv {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+
+    color: #1558BE;
 }
