Config and Add new for Create CV Screen

--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -1,3 +1,4 @@
 <div [@routerTransition]>
-
+    <button type="button" (click)="downloadPDFbyHTML()"></button>
+    <div innerHtml="{{test}}" id="cv" #cv></div>
 </div>
