--- a/7.1.0/angular/src/main/user-information/user-information.component.html
+++ b/7.1.0/angular/src/main/user-information/user-information.component.html
@@ -10,7 +10,7 @@
             <div class="form-group">
               <label for="exampleInputName">Họ và tên</label>
               <input type="text" class="form-control" id="exampleInputName" name="lastName"
-                [(ngModel)]="userInformation.lastName" disabled>
+                [ngModel]="fullName" disabled>
             </div>
             <div class="form-group">
               <label for="exampleInputEmail">Email</label>
