--- a/7.1.0/angular/src/main/create-cv/create-cv.component.css
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.css
@@ -1,7 +1,11 @@
-#cv{
+#cv {
     width: 595px;
+    background: #FFFFFF;
+    border: 1px solid #BBBBBB;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
-.btn-download{
+
+.btn-download {
     background-color: #4314B6;
     color: white;
     padding: 0.5rem;
@@ -10,40 +14,52 @@
     margin-right: 1rem;
     max-width: 7rem;
 }
-.create-cv-header{
+
+.create-cv-header {
     height: 4rem;
     align-items: center;
 }
-.btn-outline-dark{
+
+.btn-outline-dark {
     color: white;
     border-radius: 5px;
     padding: 0.5rem;
     min-width: 7rem;
 }
+
 .h-6 {
     height: 1.5rem;
 }
+
 .w-5 {
     width: 1.25rem;
 }
+
 .px-0\.5 {
     padding-left: .125rem;
     padding-right: .125rem;
 }
+
 .flex-shrink-0 {
     flex-shrink: 0;
 }
+
 .duration-150 {
     transition-duration: .15s;
 }
+
 .transition-colors {
-    transition-property: color,background-color,border-color,-webkit-text-decoration-color,-webkit-text-decoration-color,text-decoration-color,fill,stroke;
+    transition-property: color, background-color, border-color, -webkit-text-decoration-color, -webkit-text-decoration-color, text-decoration-color, fill, stroke;
     transition-duration: .15s;
-    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 }
 
-input {
+input[type=text] {
+    border-width: 0;
+}
+
+input[type=text]:focus {
     outline: 0;
-    border-width: 0 0 2px;
+    border-width: 0 0 2px !important;
     border-color: white
-  }
+}
