--- a/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
+++ b/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
@@ -15,11 +15,13 @@
 
     .box-cv-wrapper {
         display: flex;
-        min-height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
     }
 
     .box-sidebar {
-        width: 320px;
+        width: 400px;
         background-color: #144E52;
         color: #fff;
         padding: 3rem 2rem;
@@ -182,11 +184,11 @@
     }
 
     /*Responsive*/
-    /* @media (max-width: 991px) {
+    @media (max-width: 991px) {
         .box-sidebar {
             width: 320px;
         }
-    } */
+    }
 
     @media (max-width: 768px) {
         .box-cv-wrapper {
@@ -228,7 +230,7 @@
             <img src="img/avatar.png" alt="">
         </div>
         <div class="userinfo">
-            <div class="username" [(ngModel)]="username">Uoc Nguyen</div>
+            <div class="username">Uoc Nguyen</div>
             <div class="post">Frontend Developer</div>
         </div>
         <div class="contact-info">
