--- a/7.1.0/angular/src/main/create-cv/create-cv.component.css
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.css
@@ -1,5 +1,6 @@
 #cv {
-    width: 595px;
+    width: 818px;
+    height: 1094px;
     background: #FFFFFF;
     border: 1px solid #BBBBBB;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
