--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid pl-0 pr-0">
         <div class="col-12 p-0" style="height: 100vh;">
             <div class="row bg-black d-flex create-cv-header">
-                <button type="button" class="btn btn-outline-dark mr-auto ml-3">Trở về</button>
+                <button type="button" class="btn btn-outline-dark mr-auto ml-3" (click)="cancelCreate()">Trở về</button>
                 <input type="text"
                     class="rounded-none max-w-full outline-none inline-block m-auto text-start overflow-hidden border-b duration-150 transition-colors bg-transparent cursor-text px-0 truncate placeholder-opacity-1 py-0.5 my-0.5 placeholder-gray-200 focus:placeholder-gray-400 focus:border-brand-400 hover:border-gray-700"
                     alt="Resume Long Trần" placeholder="Resume Long Trần" value=""
@@ -18,12 +18,75 @@
             </div>
             <div class="container-fluid p-0 w-100 h-100">
                 <div class="row h-100 d-flex">
-                    <div class="col p-0 d-flex">
-
+                    <div class="col p-0">
+                        <div class="form d-flex" style="padding: 2rem 5rem;">
+                            <form class="w-100" style="height:max-content">
+                                <div class="form-row">
+                                    <h3 class="font-weight-bold title-form">Thông tin liên hệ</h3>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputName">Họ và tên</label>
+                                    <input type="text" class="form-control" id="exampleInputName" name="lastName"
+                                        disabled>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail">Email</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" name="email"
+                                        placeholder="Enter email" disabled>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputPhoneNumber">Số điện thoại</label>
+                                    <input type="text" class="form-control" id="exampleInputPhoneNumber"
+                                        name="phoneNumber" placeholder="Enter your phone">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputAddress">Địa chỉ</label>
+                                    <input type="text" class="form-control" id="exampleInputAddress"
+                                        aria-describedby="addressHelp" placeholder="Enter address">
+                                </div>
+                                <div class="form-row">
+                                    <h3 class="font-weight-bold title-form">Quản lý tài khoản</h3>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputUsername">Tên đăng nhập</label>
+                                    <input type="text" class="form-control" name="userName" id="exampleInputUsername"
+                                        disabled>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputPassword">Mật khẩu</label>
+                                    <input type="password" class="form-control" name="password"
+                                        id="exampleInputPassword" disabled>
+                                </div>
+                                <div class="form-group custom-control custom-switch">
+                                    <input type="checkbox" class="custom-control-input" id="customSwitches">
+                                    <label class="custom-control-label" for="customSwitches">Nhận thông báo</label>
+                                </div>
+                                <div class="form-row">
+                                    <h3 class="font-weight-bold title-form">CV của tôi</h3>
+                                </div>
+                                <div class="form-group">
+                                    <a href="#" class="link-cv">CV-TranDucLong-09-2021-2.pdf</a>
+                                </div>
+                                <div class="form-group">
+                                    <label class="text-muted label-pdf">Hỗ trợ định dạng .doc .docx .pdf,<br>
+                                        không chứa mật khẩu bảo vệ, dung lượng dưới 1 MB</label>
+                                </div>
+                                <div class="form-group"><button type="button"
+                                        class="btn btn-primary float-right btn-form">Lưu</button>
+                                    <button type="submit" class="btn btn-primary float-right btn-form">Hủy</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                     <div class="col p-0 d-flex justify-content-center align-items-center"
                         style="background-color: #F5F5F5;">
-                        <div innerHtml="{{test}}" id="cv" #cv></div>
+                        <div id="cv" #cv>
+                            <iframe class="w-100 h-100"
+                                src="http://127.0.0.1:5500/src/assets/template/ResponsiveCVResume/index.html">
+                                <app-base-template></app-base-template>
+                            </iframe>
+
+                        </div>
                     </div>
 
                 </div>
@@ -32,5 +95,4 @@
 
         </div>
     </div>
-
 </div>
