--- a/7.1.0/angular/src/account/login/login.component.html
+++ b/7.1.0/angular/src/account/login/login.component.html
@@ -1,83 +1,54 @@
 ﻿<div [@routerTransition]>
-  <h4 class="text-center mb-3">{{ "LogIn" | localize }}</h4>
+  <h4 class="text-center mb-3">{{ "Đăng Nhập" | localize }}</h4>
   <form novalidate autocomplete="off" #loginForm="ngForm" (ngSubmit)="login()">
     <div class="form-group">
       <div class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          name="userNameOrEmailAddress"
+        <input type="text" class="form-control" name="userNameOrEmailAddress"
           [(ngModel)]="authService.authenticateModel.userNameOrEmailAddress"
-          [placeholder]="'UserNameOrEmail' | localize"
-          required
-          maxlength="256"
-          #userNameOrEmailAddressModel="ngModel"
-          #userNameOrEmailAddressEl
-        />
+          [placeholder]="'UserNameOrEmail' | localize" required maxlength="256" #userNameOrEmailAddressModel="ngModel"
+          #userNameOrEmailAddressEl />
         <div class="input-group-append">
           <div class="input-group-text">
             <span class="fas fa-user"></span>
           </div>
         </div>
       </div>
-      <abp-validation-summary
-        [control]="userNameOrEmailAddressModel"
-        [controlEl]="userNameOrEmailAddressEl"
-      ></abp-validation-summary>
+      <abp-validation-summary [control]="userNameOrEmailAddressModel" [controlEl]="userNameOrEmailAddressEl">
+      </abp-validation-summary>
     </div>
     <div class="form-group">
       <div class="input-group">
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          [(ngModel)]="authService.authenticateModel.password"
-          [placeholder]="'Password' | localize"
-          required
-          maxlength="32"
-          #passwordModel="ngModel"
-          #passwordEl
-        />
+        <input type="password" class="form-control" name="password" [(ngModel)]="authService.authenticateModel.password"
+          [placeholder]="'Password' | localize" required maxlength="32" #passwordModel="ngModel" #passwordEl />
         <div class="input-group-append">
           <div class="input-group-text">
             <span class="fas fa-lock"></span>
           </div>
         </div>
       </div>
-      <abp-validation-summary
-        [control]="passwordModel"
-        [controlEl]="passwordEl"
-      ></abp-validation-summary>
+      <abp-validation-summary [control]="passwordModel" [controlEl]="passwordEl"></abp-validation-summary>
     </div>
     <div class="form-group row">
       <div class="col-md-8">
         <div class="custom-control custom-checkbox">
-          <input
-            type="checkbox"
-            class="custom-control-input"
-            id="rememberMe"
-            name="rememberMe"
-            [(ngModel)]="authService.rememberMe"
-          />
+          <input type="checkbox" class="custom-control-input" id="rememberMe" name="rememberMe"
+            [(ngModel)]="authService.rememberMe" />
           <label for="rememberMe" class="custom-control-label">
-            {{ "RememberMe" | localize }}
+            {{ "Nhớ mật khẩu" | localize }}
           </label>
         </div>
       </div>
-      <div class="col-md-4">
-        <button
-          type="submit"
-          class="btn btn-primary btn-block"
-          [disabled]="!loginForm.form.valid || submitting"
-        >
-          {{ "LogIn" | localize }}
+      <div class="col-md-12 mt-3">
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.form.valid || submitting">
+          {{ "Đăng nhập" | localize }}
         </button>
+      </div>
+      <div *ngIf="isSelfRegistrationAllowed" class="col-md-12 mb-1">
+        <div class="mt-3" [routerLink]="['../register']">
+          <button type="button" class="btn btn-danger btn-block"> {{ "Đăng ký" | localize }}</button>
+        </div>
       </div>
     </div>
   </form>
-  <p *ngIf="isSelfRegistrationAllowed" class="mb-1">
-    <a [routerLink]="['../register']">
-      <i class="fa fa-plus-circle"></i> {{ "Register" | localize }}
-    </a>
-  </p>
+
 </div>
