--- a/7.1.0/angular/src/main/layout/header.component.html
+++ b/7.1.0/angular/src/main/layout/header.component.html
@@ -93,13 +93,13 @@
         <ul id="basic-link-dropdown" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
           aria-labelledby="basic-link">
           <li>
-            <a class="dropdown-item" routerLink="user-information/1">My profile</a>
+            <a class="dropdown-item" routerLink="user-information/1">Thông tin của tôi</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" routerLink="reset-password">Đổi mật khẩu</a>
           </li>
           <li>
-            <a class="dropdown-item" href="javascript:;" (click)="logout()">Logout</a>
+            <a class="dropdown-item" href="javascript:;" (click)="logout()">Đăng xuất</a>
           </li>
         </ul>
       </div>
