--- a/7.1.0/angular/src/main/create-cv/create-cv.component.css
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.css
@@ -16,6 +16,17 @@
     max-width: 7rem;
 }
 
+.bg-gray-100 {
+    background-color: rgb(243 244 246) !important;
+}
+
+.form-label {
+    color: #52525A;
+    font-size: 14px;
+    font-family: 'Poppins';
+    font-weight: 500 !important;
+}
+
 .create-cv-header {
     height: 4rem;
     align-items: center;
@@ -26,6 +37,17 @@
     border-radius: 5px;
     padding: 0.5rem;
     min-width: 7rem;
+}
+
+.form-control {
+    height: 3rem;
+    border: none;
+    outline: none;
+}
+
+.form-control:focus {
+    border: 1px solid #5d25e7;
+    border-radius: 5px;
 }
 
 .h-6 {
@@ -55,12 +77,107 @@
     transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 }
 
-input[type=text] {
+.text-start {
     border-width: 0;
 }
 
-input[type=text]:focus {
+.text-start:focus {
     outline: 0;
     border-width: 0 0 2px !important;
     border-color: white
+}
+
+.avatar-upload {
+    position: relative;
+    max-width: 205px;
+}
+
+.avatar-upload .avatar-edit {
+    position: absolute;
+    right: 3rem;
+    z-index: 1;
+    top: 2rem;
+}
+
+.avatar-upload .avatar-edit input {
+    display: none;
+}
+
+.avatar-upload .avatar-edit .custom-label {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 0;
+    background: #3efc78;
+    border: 1px solid transparent;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    font-weight: normal;
+    transition: all 0.2s ease-in-out;
+}
+
+.avatar-upload .avatar-edit .upload-image {
+    background: #3efc78;
+}
+
+.avatar-upload .avatar-edit .remove-image {
+    background: #E91E63;
+}
+
+.avatar-upload .avatar-edit .custom-label:hover {
+    opacity: 1;
+}
+
+.avatar-upload .avatar-edit .custom-label:after {
+    position: absolute;
+    text-align: center;
+    margin: auto;
+    top: 8px;
+    right: 0;
+    left: 2px;
+    width: 18px;
+}
+
+.avatar-upload .avatar-edit .upload-image:after {
+    content: url('../../assets/img/edit.svg');
+}
+
+.avatar-upload .avatar-edit .remove-image:after {
+    content: url('../../assets/img/close.svg');
+    left: 0px !important;
+}
+
+.avatar-upload .avatar-preview {
+    width: 9rem;
+    height: 9rem;
+    position: relative;
+    overflow: hidden;
+    border: 12px solid #fff;
+    -webkit-box-shadow: 0 0 45px rgba(0, 0, 0, .2);
+    -moz-box-shadow: 0 0 45px rgba(0, 0, 0, .2);
+    box-shadow: 0 0 45px rgba(0, 0, 0, .2);
+}
+
+.avatar-upload .avatar-preview>div {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.custom-select {
+    height: auto;
+    padding: 15px;
+    font-size: 14px;
+    cursor: pointer;
+    font-weight: 400;
+    color: #222222;
+    background-color: #FDFDFD;
+    border: 1px solid #312BC6;
+}
+.input-date {
+    background-image: url("../../assets/img/calendar.svg");
+    background-repeat: no-repeat;
+    background-position: right;
 }
