--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -99,6 +99,11 @@
                                         </ng-select>
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <label for="Description" class="form-label">Mô tả</label>
+                                    <input type="text" class="form-control bg-gray-100"
+                                        placeholder="Nhập địa chỉ của bạn" name="Description">
+                                </div>
                             </form>
                         </div>
                     </div>
