--- a/7.1.0/angular/src/main/create-cv/create-cv.component.css
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.css
@@ -1,9 +1,7 @@
 #cv {
-    width: 818px;
-    height: 1094px;
-    background: #FFFFFF;
-    border: 1px solid #BBBBBB;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    /* width: 640px; */
+    position:absolute;
+    transform: scale(0.55);
 }
 
 .btn-download {
@@ -93,9 +91,9 @@
 
 .avatar-upload .avatar-edit {
     position: absolute;
-    right: 3.6rem;
+    right: 0.5rem;
     z-index: 2;
-    top: 2.3rem;
+    top: 2rem;
 }
 
 .avatar-upload .avatar-edit input {
@@ -147,7 +145,6 @@
 }
 
 .avatar-upload .avatar-preview {
-    width: 9rem;
     height: 9rem;
     position: relative;
     overflow: hidden;
