--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -109,12 +109,8 @@
                     </div>
                     <div class="col p-0 d-flex justify-content-center align-items-center"
                         style="background-color: #F5F5F5;">
-                        <div id="cv" #cv style="transform: scale(0.8);">
-                            <!-- <iframe class="w-100 h-100" -->
-                                <!-- src="http://127.0.0.1:5500/src/assets/template/ResponsiveCVResume/index.html"> -->
+                        <div id="cv" #cv>
                                 <app-base-template></app-base-template>
-                            <!-- </iframe> -->
-
                         </div>
                     </div>
 
