Update new solution load style for review CV Screen

--- a/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
+++ b/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
@@ -1,2 +1,2 @@
-<div [innerHTML]="templateHTML | safeHtml" [ngStyle]="styleUrl">
+<div [innerHTML]="templateHTML | safeHtml" id="cvTemplate">
 </div>
