--- a/7.1.0/angular/src/main/create-cv/create-cv.component.css
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.css
@@ -47,7 +47,9 @@
     border: 1px solid #5d25e7;
     border-radius: 5px;
 }
-
+.border-danger {
+    border: 1px solid red !important;
+}
 .h-6 {
     height: 1.5rem;
 }
