--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -47,18 +47,46 @@
                                             <div class="form-group col">
                                                 <label for="firstName" class="form-label">Họ</label>
                                                 <input type="text" class="form-control bg-gray-100"
-                                                    placeholder="Nhập họ của bạn" name="firstName">
+                                                    placeholder="Nhập họ và tên đệm của bạn" formControlName="firstName" [ngClass]="firstName.invalid
+                                                     && (firstName.dirty || firstName.touched) 
+                                         ? 'border-danger' : ''" required>
+                                                <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
+                                                    class="text-danger">
+                                                    <div *ngIf="firstName.errors?.['required']">
+                                                        Vui lòng nhập họ và tên đệm của bạn.
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="form-group col ml-3">
                                                 <label for="lastName" class="form-label">Tên</label>
                                                 <input type="text" class="form-control bg-gray-100"
-                                                    placeholder="Nhập tên của bạn" name="lastName">
+                                                    placeholder="Nhập tên của bạn" formControlName="lastName" [ngClass]="lastName.invalid
+                                                     && (lastName.dirty || lastName.touched) 
+                                         ? 'border-danger' : ''" required>
+                                                <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
+                                                    class="text-danger">
+                                                    <div *ngIf="lastName.errors?.['required']">
+                                                        Vui lòng nhập tên của bạn.
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="form-group col-md-12">
                                             <label for="email" class="form-label">Email</label>
                                             <input type="text" class="form-control bg-gray-100"
-                                                placeholder="Nhập địa chỉ email của bạn" name="Email">
+                                                placeholder="Nhập địa chỉ email của bạn" formControlName="email"
+                                                [ngClass]="email.invalid
+                                                     && (email.dirty || email.touched) 
+                                         ? 'border-danger' : ''" required>
+                                         <div *ngIf="email.invalid && (email.dirty || email.touched)"
+                                                    class="text-danger">
+                                                    <div *ngIf="email.errors?.['required']">
+                                                        Vui lòng nhập email của bạn.
+                                                    </div>
+                                                    <div *ngIf="email.errors?.['pattern']">
+                                                        Email không đúng định dạng.
+                                                    </div>
+                                                </div>
                                         </div>
                                     </div>
                                 </div>
@@ -70,7 +98,20 @@
                                 <div class="form-group">
                                     <label for="phoneNumber" class="form-label">Số điện thoại</label>
                                     <input type="text" class="form-control bg-gray-100"
-                                        placeholder="Nhập số điện thoại của bạn" name="PhoneNumber">
+                                        placeholder="Nhập số điện thoại của bạn" formControlName="phoneNumber"
+                                        [ngClass]="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched) 
+                                         ? 'border-danger' : ''" required>
+                                    <div *ngIf="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched)"
+                                        class="text-danger">
+                                        <div *ngIf="phoneNumber.errors?.['required']">
+                                            Vui lòng nhập số điện thoại.
+                                        </div>
+                                        <div *ngIf="phoneNumber.errors?.['maxlength']
+                                         || phoneNumber.errors?.['minlength']
+                                         || phoneNumber.errors?.['pattern']">
+                                            Số điện thoại bắt buộc phải chứa mười số.
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="phoneNumber" class="form-label">Ngày sinh</label>
@@ -110,7 +151,7 @@
                     <div class="col p-0 d-flex justify-content-center align-items-center"
                         style="background-color: #F5F5F5;">
                         <div id="cv" #cv>
-                                <app-base-template></app-base-template>
+                            <app-base-template [dataCV]="createCVForm"></app-base-template>
                         </div>
                     </div>
 
