--- a/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
+++ b/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
@@ -241,7 +241,7 @@
         <div class="resume">
             <div class="left">
                 <div class="img_holder">
-                    <!-- <img src="pic.png" alt="picture"> -->
+                    <img [src]="dataCV.value.file" alt="picture">
                 </div>
                 <div class="contact_wrap pb">
                     <div class="title">
@@ -264,7 +264,7 @@
                             <li>
                                 <div class="li_wrap">
                                     <div class="icon"><i class="fab fa-weebly" aria-hidden="true"></i></div>
-                                    <div class="text">www.aniabukstein.com</div>
+                                    <div class="text">{{dataCV.value.birthDate | date: 'dd/MM/yyyy'}}</div>
                                 </div>
                             </li>
                             <li>
@@ -350,13 +350,11 @@
                             {{dataCV.value.firstName}} {{dataCV.value.lastName}}
                         </div>
                         <div class="role">
-                            UI UX Developer
+                            {{dataCV.value.headline}}
                         </div>
                     </div>
                     <div class="about">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta beatae optio, corporis
-                        fugit accusantium debitis laborum tenetur, quisquam distinctio nihil quam eum. Laudantium saepe,
-                        sunt, esse laboriosam dolores distinctio?
+                        {{dataCV.value.description}}
                     </div>
                 </div>
                 <div class="right_inner">
@@ -498,4 +496,3 @@
     </div>
 </div>
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-
