--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -93,7 +93,7 @@
                                 <div class="form-group">
                                     <label for="headline" class="form-label">Tiêu đề</label>
                                     <input type="text" class="form-control bg-gray-100"
-                                        placeholder="Nhập tiêu đề của CV" name="HeadLine">
+                                        placeholder="Nhập tiêu đề của CV" formControlName="headline">
                                 </div>
                                 <div class="form-group">
                                     <label for="phoneNumber" class="form-label">Số điện thoại</label>
@@ -116,7 +116,7 @@
                                 <div class="form-group">
                                     <label for="phoneNumber" class="form-label">Ngày sinh</label>
                                     <input type="text" placeholder="01/01/20"
-                                        class="form-control input-date bg-gray-100" name="birthDate" #dp="bsDatepicker"
+                                        class="form-control input-date bg-gray-100" formControlName="birthDate" #dp="bsDatepicker"
                                         bsDatepicker
                                         [bsConfig]="{ containerClass: 'theme-dark-blue', dateInputFormat: 'DD/MM/YYYY',  returnFocusToInput: true, isAnimated: true }"
                                         required readonly>
@@ -143,7 +143,7 @@
                                 <div class="form-group">
                                     <label for="Description" class="form-label">Mô tả</label>
                                     <input type="text" class="form-control bg-gray-100"
-                                        placeholder="Nhập địa chỉ của bạn" name="Description">
+                                        placeholder="Nhập địa chỉ của bạn" formControlName="description">
                                 </div>
                             </form>
                         </div>
